FIX: horizontal scroll

--- a/assets/sass/elements/_custom-elements.scss
+++ b/assets/sass/elements/_custom-elements.scss
@@ -29,9 +29,9 @@
 		content: '';
 		display: block;
 		background-color: #f5f7fb;
-		width: 10000px;
+		width: 4000px;
 		left: 50%;
-		margin-left: -5000px;
+		margin-left: -2000px;
 		height: 100%;
 		position: absolute;
 		top: 0;
