--- a/assets/sass/site/primary/_posts-and-pages.scss
+++ b/assets/sass/site/primary/_posts-and-pages.scss
@@ -2,6 +2,10 @@
 	display: block;
 }
 
+#page {
+	overflow: hidden;
+}
+
 .site-content_wrap {
 	margin-bottom: 30px;
 	.home & {
